--- a/candy.html
+++ b/candy.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/IMG_8852.JPG" alt="logo outfitje vintage" width="150"> 
+            <img src="images/logo-outfitje-vintage.JPG" alt="logo outfitje vintage" width="150"> 
         </div>
         <nav>
             <ul>
@@ -25,7 +25,7 @@
 
     <main>
         <div class="img">
-            <img src="images/IMG_8760.jpeg" alt="candy shop voorkant" width="343">
+            <img src="images/candy-foto.jpeg" alt="candy shop voorkant" width="343">
         </div>
         <h1> Candy Vintage Streetwear </h1>
         <p>
@@ -34,14 +34,14 @@
         </p>
         <h2> Outfits </h2>
         <div class="outfits">
-            <img src="images/Screenshot 2024-01-25 at 18.19.19.png" alt="candy outfit1" width="170">
-            <img src="images/Screenshot 2024-01-25 at 17.59.03.png" alt="candy outfit 2" width="170">
+            <img src="images/candy-outfit-1.png" alt="candy outfit1" width="170">
+            <img src="images/candy-outfit-2.png" alt="candy outfit 2" width="170">
         </div>
     </main>
 
     <footer>
         <div id="footer-logo">
-            <img src="images/IMG_8852.JPG" alt="logo" width="100">
+            <img src="images/logo-outfitje-vintage.JPG" alt="logo" width="100">
         </div>
         <p class="copyright">
             ©all rights served
