--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/IMG_8852.JPG" alt="logo outfitje vintage" width="150"> 
+            <img src="images/logo-outfitje-vintage.JPG" alt="logo outfitje vintage" width="150"> 
         </div>
         <nav>
             <ul>
@@ -40,12 +40,12 @@
             wordt de vraag naar nieuwe productie ook verminderd, waardoor de druk op het milieu afneemt. 
         </p>
         <div class="img">
-            <img src="images/Screenshot 2024-01-25 at 19.53.38.png" alt="jeans" width="343">
+            <img src="images/home-foto-1.png" alt="jeans" width="343">
         </div>
     </main>
     <footer>
         <div id="footer-logo">
-            <img src="images/IMG_8852.JPG" alt="logo" width="100">
+            <img src="images/logo-outfitje-vintage.JPG" alt="logo" width="100">
         </div>
         <p class="copyright">
             ©all rights served
