--- a/kilo.html
+++ b/kilo.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/IMG_8852.JPG" alt="logo outfitje vintage" width="150"> 
+            <img src="images/logo-outfitje-vintage.JPG" alt="logo outfitje vintage" width="150"> 
         </div>
         <nav>
             <ul>
@@ -25,7 +25,7 @@
 
     <main>
         <div class="img">
-            <img src="images/Screenshot 2024-01-25 at 19.45.28.png" alt="kilo shop voorkant" width="343">
+            <img src="images/kilo-foto.png" alt="kilo shop voorkant" width="343">
         </div>
         <h1> Kilo Shop </h1>
 
@@ -37,15 +37,15 @@
 
         <h2> Outfits </h2>
         <div class="outfits">
-            <img src="images/Screenshot 2024-01-25 at 17.30.44.png" alt="kilo outfit 1" width="170">
-            <img src="images/Screenshot 2024-01-25 at 17.35.09.png" alt="kilo outfit 2" width="170"> 
+            <img src="images/kilo-outfit-1.png" alt="kilo outfit 1" width="170">
+            <img src="images/kilo-outfit-2.png" alt="kilo outfit 2" width="170"> 
         </div>
 
     </main>
 
     <footer>
         <div id="footer-logo">
-            <img src="images/IMG_8852.JPG" alt="logo" width="100">
+            <img src="images/logo-outfitje-vintage.JPG" alt="logo" width="100">
         </div>
         <p class="copyright">
             ©all rights served
